# neon_bench

./: CMakeLists.txt  README.md  bench_matmul.cpp  dimensions.yaml
4x4/: 4x4.s  4x4_neon_arm_8_2.h
4x8/: 4x8.s  4x8_neon_arm_8_2.h
6x8/: 6x8.s  6x8_neon_arm_8_2.h
